discussion/kv_engine/157877/157877_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Move to event-driven checkpoint removal task

Separates routine removal of unreffed checkpoints from "emergency"
memory recovery methods like cursor dropping and expelling.

Now, once a checkpoint becomes unreferenced, the checkpoint removal
task can be notified. The task tracks vbs to visit in a VBReadyQueue,
so does not need to scan every vb each run.

Change-Id: Ibf12fe5ca11ffd4daf9fcd2de3ae9e7010256e61

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-07-20 15:41:03.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-20 16:03:13.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37909/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\kv_bucket_test.cc(23): fatal error C1083: Cannot open include file: "checkpoint_remover.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37909/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10727/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:23:10: error: "checkpoint_remover.h" file not found [clang-diagnostic-error]
#include "checkpoint_remover.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10727/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:23:10:
error: "checkpoint_remover.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10727/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11397/ : FAILURE

Compile error at [2021-07-20T15:45:58.233Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: "checkpoint_remover.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11397/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/313/ : FAILURE

Compile error at [2021-07-20T15:49:44.519Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: checkpoint_remover.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/313/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/340/ : FAILURE

Compile error at [2021-07-20T15:47:45.471Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: "checkpoint_remover.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/340/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12484/ : FAILURE

Compile error at [2021-07-20T15:57:40.330Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: checkpoint_remover.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12484/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12311/ : FAILURE

Compile error at [2021-07-20T15:54:20.581Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: checkpoint_remover.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12311/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20383/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12834/ : FAILURE

Compile error at [2021-07-20T15:51:02.722Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: "checkpoint_remover.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12834/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9384/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32322/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
